--- a/views/_forms_fields.ejs
+++ b/views/_forms_fields.ejs
@@ -11,7 +11,7 @@
     <div class="form-floating controls mb-3"><input class="form-control" type="password" name="password" id="password" required="" placeholder="Password"><label class="form-label">Password</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div class="control-group">
-    <div class="form-floating controls mb-3"><textarea class="form-control" name="article" id="article" data-validation-required-message="Please enter a Article." required="" placeholder="Article" style="height: 150px;"></textarea><label class="form-label">Article</label><small class="form-text text-danger help-block"></small></div>
+    <div class="form-floating controls mb-3"><textarea class="form-control" name="blog" id="blog" data-validation-required-message="Please enter a Article." required="" placeholder="Blog" style="height: 150px;"></textarea><label class="form-label">Blog</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div id="success"></div>
 <div class="mb-3"><button class="btn btn-primary" id="sendMessageButton" type="submit">Send</button></div>
