--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8">
-                <div class="post-preview"><a href="#">
-                        <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                        <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                    </a>
-                    <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on September 24, 2018</a></p>
-                </div>
-                <hr>
+                <% articles.forEach(article => { %>
+                    <div class="post-preview">
+                        <a href="/articles/<%= article.slug %>">
+                            <h2 class="post-title"><%= article.title %></h2>
+                            <h3 class="post-subtitle"><%= article.description %></h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted by&nbsp;<a href="#"><%= article.name %> on <%= article.createdAt.toLocaleDateString() %></a>
+                        </p>
+                    </div>
+                    <hr>
+                <% }) %>
             </div>
         </div>
     </div>
