--- a/views/_forms_fields.ejs
+++ b/views/_forms_fields.ejs
@@ -1,17 +1,17 @@
 <div class="control-group">
-    <div class="form-floating controls mb-3"><input class="form-control" type="text" name="name" id="name" required="" placeholder="Name"><label class="form-label" for="name">Name</label><small class="form-text text-danger help-block"></small></div>
+    <div class="form-floating controls mb-3"><input class="form-control" type="text" name="name" id="name" required="" placeholder="Name" value="<%= article.name %>"><label class="form-label" for="name">Name</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div class="control-group">
-    <div class="form-floating controls mb-3"><input class="form-control" name="heading" id="heading" required="" placeholder="heading"><label class="form-label">Article Heading</label><small class="form-text text-danger help-block"></small></div>
+    <div class="form-floating controls mb-3"><input class="form-control" name="heading" id="heading" required="" placeholder="heading" value="<%= article.title %>"><label class="form-label">Article Heading</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div class="control-group">
-    <div class="form-floating controls mb-3"><input class="form-control" name="description" id="description" required="" placeholder="Description"><label class="form-label">Description</label><small class="form-text text-danger help-block"></small></div>
+    <div class="form-floating controls mb-3"><input class="form-control" name="description" id="description" required="" placeholder="Description" value="<%= article.description %>"><label class="form-label">Description</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div class="control-group">
     <div class="form-floating controls mb-3"><input class="form-control" type="password" name="password" id="password" required="" placeholder="Password"><label class="form-label">Password</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div class="control-group">
-    <div class="form-floating controls mb-3"><textarea class="form-control" name="blog" id="blog" data-validation-required-message="Please enter a Article." required="" placeholder="Blog" style="height: 150px;"></textarea><label class="form-label">Blog</label><small class="form-text text-danger help-block"></small></div>
+    <div class="form-floating controls mb-3"><textarea class="form-control" name="blog" id="blog" data-validation-required-message="Please enter a Article." required="" placeholder="Blog" style="height: 150px;"><%= article.markdown %></textarea><label class="form-label">Blog</label><small class="form-text text-danger help-block"></small></div>
 </div>
 <div id="success"></div>
 <div class="mb-3"><button class="btn btn-primary" id="sendMessageButton" type="submit">Send</button></div>
