--- a/views/view.ejs
+++ b/views/view.ejs
@@ -12,6 +12,11 @@
             </div>
         </div>
     </header>
+    <a href="/articles/edit/<%= article.slug %>" style="margin-left: 20%;">
+        <button class="btn btn-primary border rounded-pill" type="button">
+            Edit
+        </button>
+    </a>
     <article>
         <div class="container">
             <div class="row">
